# boatregister

./: .nojekyll  404.html  add_designer_items  add_examples_to_design_classes  add_kw.py  app-0f4e6c135aebd7e925b4.js  app-0f4e6c135aebd7e925b4.js.map  app-4cde987665dfe84beda8.js  app-4cde987665dfe84beda8.js.map  app-9535673be1a842374327.js  app-9535673be1a842374327.js.map  boat.json  boat_field  boat_field.py  boat_from_gql.js  builder.json  changed_boats.py  check.py  check_and_update_galleries.py  check_boat_handicap.py  chunk-map.json  component---src-templates-boattemplate-jsx-064080e0f5bc7b6bacb4.js  component---src-templates-boattemplate-jsx-064080e0f5bc7b6bacb4.js.LICENSE.txt  component---src-templates-boattemplate-jsx-064080e0f5bc7b6bacb4.js.map  component---src-templates-boattemplate-jsx-bce6159bb6d5308a2021.js  component---src-templates-boattemplate-jsx-bce6159bb6d5308a2021.js.LICENSE.txt  component---src-templates-boattemplate-jsx-bce6159bb6d5308a2021.js.map  component---src-templates-boattemplate-jsx-c93fbe286a4ea235e668.js  component---src-templates-boattemplate-jsx-c93fbe286a4ea235e668.js.map  construction_material.json  construction_method.json  current_owners  design_class.json  designer.json  done  editors_choice.json  embeddable_add.html  enrich_places.py  filterable.json  fix_feet_to_metres  (+62 more)
.devcontainer/: devcontainer.json
.github/: member_change.yaml
404/: index.html
archive/: boat_from_gql.js  editors_choice  getnewboat.sh  getoganos.sh  make_boat_yaml
fleets/: editors choice
page-data/: app-data.json
picklists/: builder.yaml  (+10 more)
(+11817 files in other folders)
