[tool.poetry]
name = "boatregister"
version = "0.1.0"
description = ""
authors = ["jcable <julian.cable@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,^3.10,^3.9"
markdownify = "^0.11.6"
pyyaml = "^6.0"
markdown = "^3.4.3"
ruamel-yaml = "^0.17.26"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
