[tool.poetry]
name = "boatregister"
version = "0.1.0"
description = ""
authors = ["jcable <julian.cable@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0"
ruamel-yaml = "^0.17.26"
requests = "^2.31.0"
markdown-text-decorator = "^3.2.0"
jsonpatch = "^1.33"
markdownify = "^1.2.0"
markdown = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
